--- a/kcdu_practicals/Data_Types.ipynb
+++ b/kcdu_practicals/Data_Types.ipynb
@@ -1341,6 +1341,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['889-242-4782', '121-232-4343']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re_object = re.compile(r'\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d')\n",
+    "text = \"my phone number is 889-242-4782 and my office no is 121-232-4343\"\n",
+    "textReg = re_object.findall(text)\n",
+    "print(textReg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(textReg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
