--- a/rcdu_2750_practicals/Data_Preprocessing.ipynb
+++ b/rcdu_2750_practicals/Data_Preprocessing.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
-    "from sklearn import preprocessingprocessing"
+    "from sklearn import preprocessing"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,34 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean =  [ 5.55111512e-17 -5.55111512e-17  7.40148683e-17  3.70074342e-17]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Mean = \", std_data.mean(axis = 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Std. Dviation [1. 1. 1. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Std. Dviation\", std_data.std(axis=0))"
    ]
@@ -78,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,19 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaled data =  [[1.         0.         1.         0.        ]\n",
-      " [0.         1.         0.18867925 1.        ]\n",
-      " [0.33333333 0.825      0.         0.14285714]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Scaled data = \", scaled_data)"
    ]
@@ -114,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,26 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalized data [[ 0.2238806  -0.07462687  0.2238806  -0.47761194]\n",
-      " [ 0.          0.35714286 -0.1547619   0.48809524]\n",
-      " [ 0.0952381   0.21904762 -0.21904762 -0.46666667]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Normalized data\", normalized_data1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,19 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalized data [[ 0.3874275  -0.1291425   0.3874275  -0.826512  ]\n",
-      " [ 0.          0.57207755 -0.24790027  0.78183932]\n",
-      " [ 0.16762393  0.38553503 -0.38553503 -0.82135723]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Normalized data\", normalized_data2)"
    ]
@@ -177,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
