--- a/kcdu_practicals/Some Functions.ipynb
+++ b/kcdu_practicals/Some Functions.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** WAF to check whether an input number is prime or not **"
+    "** WAP to check whether an input number is prime or not **"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
