--- a/WorkshopD2F3_numpy.ipynb
+++ b/WorkshopD2F3_numpy.ipynb
@@ -6,12 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np "
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1 = 'saket\\'s msg''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +98,7 @@
        "       [4, 2, 5]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,20 +183,20 @@
      "text": [
       "\n",
       "An array initialized with all zeros:\n",
-      " [[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
+      " [[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n"
      ]
     }
    ],
    "source": [
-    "c = np.zeros((3, 4)) \n",
+    "c = np.zeros((3, 4), dtype='int32') \n",
     "print (\"\\nAn array initialized with all zeros:\\n\", c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -196,20 +205,20 @@
      "text": [
       "\n",
       "An array initialized with all 6s. Array type is complex:\n",
-      " [[6.+0.j 6.+0.j 6.+0.j]\n",
-      " [6.+0.j 6.+0.j 6.+0.j]\n",
-      " [6.+0.j 6.+0.j 6.+0.j]]\n"
+      " [[1.+0.j 1.+0.j 1.+0.j]\n",
+      " [1.+0.j 1.+0.j 1.+0.j]\n",
+      " [1.+0.j 1.+0.j 1.+0.j]]\n"
      ]
     }
    ],
    "source": [
-    "d = np.full((3, 3), 6, dtype = 'complex') \n",
+    "d = np.full((3, 3), 1, dtype = 'complex') \n",
     "print (\"\\nAn array initialized with all 6s. Array type is complex:\\n\",d) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +227,8 @@
      "text": [
       "\n",
       "A random array:\n",
-      " [[0.62842471 0.48032657]\n",
-      " [0.92577076 0.76424753]]\n"
+      " [[0.14737979 0.07382336]\n",
+      " [0.94492456 0.8013114 ]]\n"
      ]
     }
    ],
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -270,18 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "arr = np.array([[1, 2, 3, 4], \n",
     "                [5, 2, 4, 2], \n",
-    "                [1, 2, 0, 1]])   "
+    "                [1, 2, 0, 1]])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +333,7 @@
       " [[1 2 3]\n",
       " [4 5 6]]\n",
       "\n",
-      "Fattened array:\n",
+      "Fatterned array:\n",
       " [1 2 3 4 5 6]\n"
      ]
     }
@@ -334,12 +343,12 @@
     "flarr = arr.flatten() \n",
     "  \n",
     "print (\"\\nOriginal array:\\n\", arr) \n",
-    "print (\"\\nFattened array:\\n\", flarr)"
+    "print (\"\\nFatterned array:\\n\", flarr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -700,20 +709,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 1.57079633, 3.14159265])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([0, np.pi/2, np.pi])\n",
     "a"
@@ -721,34 +719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sine values of array elements: [0.0000000e+00 1.0000000e+00 1.2246468e-16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Sine values of array elements:\", np.sin(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exponent of array elements: [ 1.          2.71828183  7.3890561  20.08553692]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([0, 1, 2, 3]) \n",
     "print (\"Exponent of array elements:\", np.exp(a)) "
@@ -756,39 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Square root of array elements: [0.         1.         1.41421356 1.73205081]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Square root of array elements:\", np.sqrt(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  4.,  2.],\n",
-       "       [ 3.,  4.,  6.],\n",
-       "       [ 0., -1.,  5.]])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([[1, 4, 2], [3, 4, 6], [0, -1, 5]], dtype='float') \n",
     "a"
@@ -796,78 +757,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Array elements in sorted order:\n",
-      " [[ 1  2  4]\n",
-      " [ 3  4  6]\n",
-      " [-1  0  5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Array elements in sorted order:\\n\", np.sort(a)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Array elements in sorted order:\n",
-      " [-1  0  1  2  3  4  4  5  6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Array elements in sorted order:\\n\", np.sort(a, axis=None)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row-wise sorted array:\n",
-      " [[ 1  2  4]\n",
-      " [ 3  4  6]\n",
-      " [-1  0  5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Row-wise sorted array:\\n\", np.sort(a, axis = 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column wise sort by applying merge-sort:\n",
-      " [[ 0 -1  2]\n",
-      " [ 1  4  5]\n",
-      " [ 3  4  6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Column wise sort by applying merge-sort:\\n\",\n",
     "       np.sort(a, axis = 0, kind = 'mergesort')) "
@@ -875,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +805,7 @@
        "      dtype=[('name', 'S10'), ('grad_year', '<i4'), ('cgpa', '<f8')])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,23 +822,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Array sorted by names:\n",
-      " [(b'Aakash', 2009, 9. ) (b'Ajay', 2008, 8.7) (b'Hrithik', 2009, 8.5)\n",
-      " (b'Pankaj', 2008, 7.9)]\n",
-      "Array sorted by grauation year and then cgpa:\n",
-      " [(b'Pankaj', 2008, 7.9) (b'Ajay', 2008, 8.7) (b'Hrithik', 2009, 8.5)\n",
-      " (b'Aakash', 2009, 9. )]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"\\nArray sorted by names:\\n\", np.sort(arr, order = 'name')) \n",
     "              \n",
