--- a/WorkshopD1F1.ipynb
+++ b/WorkshopD1F1.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Pyhton Operators**"
+    "**Python Operators**"
    ]
   },
   {
