--- a/WorkshopD1F1.ipynb
+++ b/WorkshopD1F1.ipynb
@@ -845,13 +845,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is saket and 3 year experience. Now saket is      taching python to graduate 3 studenst \n"
+      "My name is saket and 3 year experience. Now saket is      taching python to graduate 3 student \n"
      ]
     }
    ],
    "source": [
     "print(\"My name is {0} and {1} year experience. Now {0} is\\\n",
-    "      taching python to graduate {1} studenst \"\\\n",
+    "      taching python to graduate {1} student \"\\\n",
     "      .format(v1,v2))"
    ]
   },
@@ -863,7 +863,7 @@
     {
      "data": {
       "text/plain": [
-       "{3, 4.5, 'mca', 'saket'}"
+       "{'mca', 'saket', 3, 4.5}"
       ]
      },
      "execution_count": 76,
