--- a/WorkshopD1F1.ipynb
+++ b/WorkshopD1F1.ipynb
@@ -905,8 +905,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'shyam', 'jhon', 'mohan', 'jon', 'saket'}\n",
-      "{'shyam', 'jhon', 'mohan', 'ram', 'saket'}\n"
+      "{'mohan', 'shyam', 'jhon', 'saket', 'jon'}\n",
+      "{'mohan', 'shyam', 'jhon', 'ram', 'saket'}\n"
      ]
     }
    ],
@@ -924,7 +924,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'shyam', 'jhon', 'mohan', 'ram', 'jon', 'saket'}\n"
+      "{'mohan', 'shyam', 'jhon', 'ram', 'saket', 'jon'}\n"
      ]
     }
    ],
