--- a/WorkshopD2F3_numpy.ipynb
+++ b/WorkshopD2F3_numpy.ipynb
@@ -191,7 +191,10 @@
    ],
    "source": [
     "c = np.zeros((3, 4), dtype='int32') \n",
-    "print (\"\\nAn array initialized with all zeros:\\n\", c)"
+    "print (\"\\nAn array initialized with all zeros:\\n\", c"
+    "d = np.ones((3,4), dtype=int) \n",
+    "print (\"\\nAn array initialized with all one:\\n\", d"
+    
    ]
   },
   {
