--- a/BCA_VB/23-07-2021.ipynb
+++ b/BCA_VB/23-07-2021.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "for key,  in a.items():\n",
+    "for key, value in a.items():\n",
     "    print(\"Key = \", key, \"and Value = \", value)"
    ]
   },
