--- a/WorkshopD1F1.ipynb
+++ b/WorkshopD1F1.ipynb
@@ -1445,9 +1445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('saket', 'kumar', [2, 3], 3)\n",
+      "('saket', 'kumar', [2, 3], 3)\n",
+      "('saket', 'kumar', [2, 3], 3)\n",
+      "('saket', 'kumar', [2, 3], 3)\n",
+      "name saket\n",
+      "subject pyhton\n",
+      "year 3\n"
+     ]
+    }
+   ],
    "source": [
     "def print_a(*kw1, **kw2):\n",
     "    for k in kw1:\n",
