--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -295,9 +295,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae1fe195",
+   "metadata": {},
+   "source": [
+    "#### 7. Write a Python program to calculate the length of a string. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4fa26560",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 3) (147521439.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"The length of the given string {} is {}.format(str, len(str)))\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the string: \")\n",
+    "str = input()\n",
+    "print(\"The length of the given string {} is {}\".format(str, len(str)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f8b09f",
+   "id": "0b89c303",
    "metadata": {},
    "outputs": [],
    "source": []
