--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -63,8 +63,8 @@
      "output_type": "stream",
      "text": [
       "Please enter a number: \n",
-      "4\n",
-      "Factorial of 4 is 24.\n"
+      "5\n",
+      "Factorial of 5 is 120.\n"
      ]
     }
    ],
@@ -107,8 +107,8 @@
      "output_type": "stream",
      "text": [
       "Enter the radius of the circle: \n",
-      "3\n",
-      "Area of the circle wirh radius 3.0 is 28.259999999999998.\n"
+      "1\n",
+      "Area of the circle wirh radius 1.0 is 3.14.\n"
      ]
     }
    ],
@@ -133,8 +133,8 @@
      "output_type": "stream",
      "text": [
       "Enter the radius of the circle: \n",
-      "4\n",
-      "Area of the circle wirh radius 4.0 is 50.24.\n"
+      "2\n",
+      "Area of the circle wirh radius 2.0 is 12.56.\n"
      ]
     }
    ],
@@ -170,15 +170,15 @@
      "output_type": "stream",
      "text": [
       "Enter the year: 2000\n",
-      "Enter the month (1-12): 2\n",
-      "Calendar for 2000-2\n",
-      "   February 2000\n",
+      "Enter the month (1-12): 3\n",
+      "Calendar for 2000-3\n",
+      "     March 2000\n",
       "Mo Tu We Th Fr Sa Su\n",
-      "    1  2  3  4  5  6\n",
-      " 7  8  9 10 11 12 13\n",
-      "14 15 16 17 18 19 20\n",
-      "21 22 23 24 25 26 27\n",
-      "28 29\n",
+      "       1  2  3  4  5\n",
+      " 6  7  8  9 10 11 12\n",
+      "13 14 15 16 17 18 19\n",
+      "20 21 22 23 24 25 26\n",
+      "27 28 29 30 31\n",
       "\n"
      ]
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "04f95e7e",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5cb03ec2",
    "metadata": {},
    "outputs": [
@@ -264,13 +264,13 @@
      "output_type": "stream",
      "text": [
       "Enter the principal amountis\n",
-      "100\n",
+      "10000\n",
       "Enter the time period is\n",
-      "2\n",
+      "3\n",
       "Enter the rate of interest is\n",
-      "10\n",
-      "The Simple Interest is 20.0\n",
-      "Compound interest is 21.899441999475727\n"
+      "13\n",
+      "The Simple Interest is 3900.0\n",
+      "Compound interest is 4685.337134515648\n"
      ]
     }
    ],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1fe195",
+   "id": "5bf7fdf1",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -304,16 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4fa26560",
+   "execution_count": 8,
+   "id": "6d97b4ed",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 3) (147521439.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"The length of the given string {} is {}.format(str, len(str)))\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: \n",
+      "This is a Python Programming lab\n",
+      "The length of the given string This is a Python Programming lab is 32\n"
      ]
     }
    ],
@@ -324,9 +325,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61cb2d9e",
+   "metadata": {},
+   "source": [
+    "#### 8. Write a Python program to split and join a string. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "25e29cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 4 (2581031160.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    joined_str = \"\".join(split_str)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Please enter the string\")\n",
+    "str = input()                                                           # read the input string\n",
+    "split_str = str.split(\" \")                                              # splitted the string with blanck space\n",
+    "for s in split_str:\n",
+    "joined_str = \"\".join(split_str)\n",
+    "print(\"Joined string is without space ---------------\\n\", joined_str)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b89c303",
+   "id": "bff47cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57cabb6a",
    "metadata": {},
    "outputs": [],
    "source": []
