--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf7fdf1",
+   "id": "c2ef156e",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6d97b4ed",
+   "id": "868f43c7",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61cb2d9e",
+   "id": "bfea809b",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -334,16 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "25e29cda",
+   "execution_count": 15,
+   "id": "ad9b4388",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 4 (2581031160.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    joined_str = \"\".join(split_str)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 4\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the string\n",
+      "This is a Python Programming Lab\n",
+      "This\n",
+      "is\n",
+      "a\n",
+      "Python\n",
+      "Programming\n",
+      "Lab\n",
+      "Joined string is without space ---------------\n",
+      " ThisisaPythonProgrammingLab\n",
+      "Joined string is with space ---------------\n",
+      " This is a Python Programming Lab\n"
      ]
     }
    ],
@@ -352,22 +362,59 @@
     "str = input()                                                           # read the input string\n",
     "split_str = str.split(\" \")                                              # splitted the string with blanck space\n",
     "for s in split_str:\n",
+    "    print(s)\n",
     "joined_str = \"\".join(split_str)\n",
-    "print(\"Joined string is without space ---------------\\n\", joined_str)"
+    "print(\"Joined string is without space ---------------\\n\", joined_str)\n",
+    "joined_str1 = \" \".join(split_str)\n",
+    "print(\"Joined string is with space ---------------\\n\", joined_str1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1b57fe3",
+   "metadata": {},
+   "source": [
+    "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9a7b4385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string:\n",
+      "There is a test of string characters\n",
+      "first 5 characters of the string are:  There\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'tuple'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfirst 5 characters of the string are: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLast three characters of the string are: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m[\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m)])\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'tuple'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the string:\")\n",
+    "str = input()\n",
+    "print(\"first 5 characters of the string are: \", str[0:5])\n",
+    "print(\"Last three characters of the string are: \", str[len(str)-3\" len(str)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff47cc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57cabb6a",
+   "id": "b5673d2d",
    "metadata": {},
    "outputs": [],
    "source": []
