--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ef156e",
+   "id": "ba8730ad",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "868f43c7",
+   "id": "63b4a281",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfea809b",
+   "id": "d24de82d",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ad9b4388",
+   "id": "23682e9a",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b57fe3",
+   "id": "490ee615",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -379,8 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "9a7b4385",
+   "execution_count": 19,
+   "id": "4205a5d6",
    "metadata": {},
    "outputs": [
     {
@@ -389,18 +389,8 @@
      "text": [
       "Enter the string:\n",
       "There is a test of string characters\n",
-      "first 5 characters of the string are:  There\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'tuple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfirst 5 characters of the string are: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLast three characters of the string are: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m[\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m)])\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'tuple'"
+      "first 5 characters of the string are:  There\n",
+      "Last three characters of the string are:  ers\n"
      ]
     }
    ],
@@ -408,13 +398,44 @@
     "print(\"Enter the string:\")\n",
     "str = input()\n",
     "print(\"first 5 characters of the string are: \", str[0:5])\n",
-    "print(\"Last three characters of the string are: \", str[len(str)-3\" len(str)])"
+    "print(\"Last three characters of the string are: \", str[len(str)-3 :len(str)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d059c13",
+   "metadata": {},
+   "source": [
+    "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a165e555",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string:\n",
+      "this\n",
+      "last character of the string is:  s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the string:\")\n",
+    "str = input()\n",
+    "print(\"last character of the string is: \", str[-1])\n",
+    "print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5673d2d",
+   "id": "8c8ee1e5",
    "metadata": {},
    "outputs": [],
    "source": []
