--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8730ad",
+   "id": "f237f55f",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "63b4a281",
+   "id": "153b9cb8",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24de82d",
+   "id": "cd6fcb95",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "23682e9a",
+   "id": "dd4b6f5e",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490ee615",
+   "id": "687457a7",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4205a5d6",
+   "id": "3e318de2",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d059c13",
+   "id": "ee674008",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -411,8 +411,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a165e555",
+   "execution_count": 24,
+   "id": "016066df",
    "metadata": {},
    "outputs": [
     {
@@ -420,22 +420,23 @@
      "output_type": "stream",
      "text": [
       "Enter the string:\n",
-      "this\n",
-      "last character of the string is:  s\n"
+      "This is string character\n",
+      "Last character of the string is:  r\n",
+      "Last 5 character of the string is:  racte\n"
      ]
     }
    ],
    "source": [
     "print(\"Enter the string:\")\n",
     "str = input()\n",
-    "print(\"last character of the string is: \", str[-1])\n",
-    "print()"
+    "print(\"Last character of the string is: \", str[-1])\n",
+    "print(\"Last 5 character of the string is: \", str[-6 : -1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c8ee1e5",
+   "id": "43b12740",
    "metadata": {},
    "outputs": [],
    "source": []
