--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f237f55f",
+   "id": "12968afa",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "153b9cb8",
+   "id": "3729de4e",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd6fcb95",
+   "id": "032a465f",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dd4b6f5e",
+   "id": "27f7b38f",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687457a7",
+   "id": "56a33f50",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3e318de2",
+   "id": "fb4fcf4a",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee674008",
+   "id": "56b7cf68",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "016066df",
+   "id": "f072fcef",
    "metadata": {},
    "outputs": [
     {
@@ -434,9 +434,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3495cfca",
+   "metadata": {},
+   "source": [
+    "#### 11. Write a Python program to multiplies all the items in a list. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c9d9075f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given List of integer is [2, 3, 4, 5] and their product is 120.\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_list = [2, 3, 4, 5]\n",
+    "int_mul = 1\n",
+    "for i in int_list:\n",
+    "   int_mul = int_mul*i\n",
+    "print(\"Given List of integer is {} and their product is {}.\".format(int_list, int_mul))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8f94e4d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m l \u001b[38;5;241m=\u001b[39m [a, b , c ]\n\u001b[0;32m      2\u001b[0m m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m l:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "l = [a, b , c ]\n",
+    "m=\"\"\n",
+    "for i in l:\n",
+    "    m=m*i\n",
+    "print(m)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b12740",
+   "id": "799b4d5f",
    "metadata": {},
    "outputs": [],
    "source": []
