--- a/GITAM-Lab/All_Programs.ipynb
+++ b/GITAM-Lab/All_Programs.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12968afa",
+   "id": "495ee434",
    "metadata": {},
    "source": [
     "#### 7. Write a Python program to calculate the length of a string. ####"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3729de4e",
+   "id": "25b80cad",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032a465f",
+   "id": "329a0601",
    "metadata": {},
    "source": [
     "#### 8. Write a Python program to split and join a string. ####"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "27f7b38f",
+   "id": "329d019a",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a33f50",
+   "id": "a47eb102",
    "metadata": {},
    "source": [
     "#### 9. Write a Python program to demonstrate of accessing the string- By using Positive Indexing. ####"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fb4fcf4a",
+   "id": "77d883d9",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b7cf68",
+   "id": "c54f05b2",
    "metadata": {},
    "source": [
     "#### 10. Write a Python program to demonstrate of accessing the string- By using Negative Indexing. ####"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f072fcef",
+   "id": "1f8fe549",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3495cfca",
+   "id": "db1e2b41",
    "metadata": {},
    "source": [
     "#### 11. Write a Python program to multiplies all the items in a list. ####"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c9d9075f",
+   "id": "0e975f37",
    "metadata": {},
    "outputs": [
     {
@@ -464,35 +464,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "8f94e4d2",
+   "cell_type": "markdown",
+   "id": "be101c97",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m l \u001b[38;5;241m=\u001b[39m [a, b , c ]\n\u001b[0;32m      2\u001b[0m m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m l:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "l = [a, b , c ]\n",
-    "m=\"\"\n",
-    "for i in l:\n",
-    "    m=m*i\n",
-    "print(m)"
+    "#### 12. Write a Python program to Reverse a linked list. ####    This  come later"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "799b4d5f",
+   "id": "5eec7100",
    "metadata": {},
    "outputs": [],
    "source": []
